--- a/lec-31/tasks/coloredBox.html
+++ b/lec-31/tasks/coloredBox.html
@@ -55,6 +55,13 @@
     
     <script>
         // Write the code to paint all the row in diffrent colors.
+    let tr=document.querySelectorAll("tr");
+
+tr[0].style.backgroundColor="red";
+tr[1].style.backgroundColor="yellow";
+tr[2].style.backgroundColor="green";
+tr[3].style.backgroundColor="purple";
+tr[4].style.backgroundColor="grey";
 
         
     </script>
